# nih-plug

nih_plug_vizia/: Cargo.toml
nih_plug_vizia/src/: editor.rs  lib.rs  vizia_assets.rs  widgets.rs
nih_plug_vizia/src/widgets/: param_slider.rs  peak_meter.rs  resize_handle.rs
plugins/examples/gain_gui_vizia/src/: editor.rs
src/: lib.rs
