[package]
name = "nih_plug_vizia"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use VIZIA GUIs with NIH-plug"

[dependencies]
nih_plug = { path = "..", default-features = false }
nih_plug_assets = { git = "https://github.com/robbert-vdh/nih_plug_assets.git" }

baseview = { git = "https://github.com/vizia/baseview.git", rev = "bd7774294ebd6a4ea497e9c02655a4abd0408137", features = ["opengl"] }
# This contains an as of writing not yet merged patch for rounding errors when
# resizing, and a workaround for certain events not firing when resizing
vizia = { git = "https://github.com/sout233/vizia.git", default-features = false, features = ["baseview", "clipboard", "x11"] }

crossbeam = "0.8"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
